Division of pages for each

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <!--Menu-->
 <!--End of Menu-->
 <ul id="topnav">
-    <li><a class="active">Link 1</a></li>
-    <li><a href="#">Link 2</a></li>
-    <li><a href="#">Link 3r</a></li>
-    <li><a href="#">Contact Us</a></li>
+    <li><a class="active">ABOUT SEAT</a></li>
+    <li><a href="#">Arones</a></li>
+    <li><a href="#">Cerina</a></li>
+    <li><a href="#">Resquites</a></li>
+    <li><a href="#">Serafico</a></li>
     <li><a href="#">FAQs</a></li>
 </ul>
 <div id="banner">
