Added and modified Aljun's Portfolio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <ul id="topnav">
     <li><a class="active">ABOUT SEAT</a></li>
     <li><a href="#">Arones</a></li>
-    <li><a href="#">Cerina</a></li>
+    <li><a href="about-cerina.html">Cerina</a></li>
     <li><a href="#">Resquites</a></li>
     <li><a href="#">Serafico</a></li>
     <li><a href="#">FAQs</a></li>
