Done na sa portfolio ko<3

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="#">Arones</a></li>
     <li><a href="#">Cerina</a></li>
     <li><a href="#">Resquites</a></li>
-    <li><a href="#">Serafico</a></li>
+    <li><a href="about-serafico.html">Serafico</a></li>
     <li><a href="#">FAQs</a></li>
 </ul>
 <div id="banner">
