--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--End of Menu-->
 <ul id="topnav">
     <li><a class="active">ABOUT SEAT</a></li>
-    <li><a href="#">Arones</a></li>
+    <li><a href="about-arones.html">Arones</a></li>
     <li><a href="#">Cerina</a></li>
     <li><a href="#">Resquites</a></li>
     <li><a href="#">Serafico</a></li>
