Update hyperlink in about-serafico.html

--- a/about-serafico.html
+++ b/about-serafico.html
@@ -175,7 +175,7 @@
                 <div class="contact-info">
                     <div>Email: vcserafico3@student.apc.edu.ph</div>
                     <div>Phone: 09156129561</div>
-                    <div>LinkedIn: https://www.linkedin.com/in/vandre-adrian-serafico-1b461b28a/</div>
+                    <div>LinkedIn: <a>https://www.linkedin.com/in/vandre-adrian-serafico-1b461b28a/</a></div>
                     <div>GitHub: github.com/awitize11</div>
                 </div>
             </div>
