--- a/about-resquites.html
+++ b/about-resquites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aljun Cerina</title>
+    <title>John Lenard Resquites</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -129,16 +129,15 @@
             .header-content {
                 margin-top: 10px;
             }
-            
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="aljun-pic.jpg" alt="Aljun's pfp">
+            <img src="john-lenard-pic.png" alt="John Lenard's pfp">
             <div class="header-content">
-                <h1>Cerina, Aljun C.</h1>
+                <h1>Resquites, John Lenard</h1>
                 <p>Student at Asia Pacific College</p>
                 <p class="objective">Manila, National Capital Region, Philippines</p>
             </div>
@@ -147,16 +146,16 @@
         <div class="content">
             <div class="section">
                 <h2>About Me</h2>
-                <p>Second-year Bachelor of Science in Information Technology (BSIT) student at Asia Pacific College, specializing in Mobile and Internet Technologies. Driven by a passion for technology and innovation, with aspirations to make a meaningful impact in the field of cybersecurity.</p>
+                <p>Second-year Bachelor of Science in Information Technology (BSIT) student at Asia Pacific College, specializing in Mobile and Internet Technologies. Experienced in software development and driven by a passion for innovation, technology, and creative problem-solving.</p>
             </div>
 
             <div class="section">
                 <h2>Skills</h2>
                 <div class="skills">
-                    <div>Android Development</div>
-                    <div>Can carry on VALORANT add me: kariman#huh</div>
-                    <div>Bikerist</div>
-                    <div>ChatGpt Prompt Engineer</div>
+                    <div>Full Stack Development</div>
+                    <div>Mobile App Design</div>
+                    <div>Database Management</div>
+                    <div>Proficient in Python and Java</div>
                 </div>
             </div>
 
@@ -164,25 +163,25 @@
                 <h2>Projects</h2>
                 <div class="projects">
                     <div>Project SEAT</div>
-                    <div>SDG Flip Game</div>
-                    <div>Project: Vayne</div>
-                    <div>ABS:PC</div>
+                    <div>DUDA Research</div>
+                    <div>Transit Access System</div>
+                    <div>Personal Portfolio</div>
                 </div>
             </div>
 
             <div class="section">
                 <h2>Contact Information</h2>
                 <div class="contact-info">
-                    <div>Email: accerina@student.apc.edu.ph</div>
-                    <div>Phone: (123) 456-7890</div>
-                    <div>LinkedIn: <a href="https://www.linkedin.com/in/aljuncerina/" target="_blank">linkedin.com/in/aljuncerina</a></div>
-                    <div>GitHub: <a href="https://github.com/kar1man" target="_blank">github.com/kar1man</a></div>
+                    <div>Email: jbresquites@student.apc.edu.ph</div>
+                    <div>Phone: 09761225871</div>
+                    <div>LinkedIn: <a href="https://ph.linkedin.com/in/john-lenard-resquites-610867288" target="_blank">https://ph.linkedin.com/in/john-lenard-resquites-610867288</a></div>
+                    <div>GitHub: <a href="https://github.com/leenaardddd" target="_blank">https://github.com/leenaardddd</a></div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            &copy; 2024 Aljun Cerina. All Rights Reserved.
+            &copy; 2024 John Lenard Resquites. All Rights Reserved.
         </div>
     </div>
 </body>
