--- a/about-resquites.html
+++ b/about-resquites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aljun Cerina</title>
+    <title>John Lenard Resquites</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -136,9 +136,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="aljun-pic.jpg" alt="Aljun's pfp">
+            <img src="lenard.jpg" alt="Aljun's pfp">
             <div class="header-content">
-                <h1>Cerina, Aljun C.</h1>
+                <h1>Resquites, John Lenard B.</h1>
                 <p>Student at Asia Pacific College</p>
                 <p class="objective">Manila, National Capital Region, Philippines</p>
             </div>
@@ -153,9 +153,9 @@
             <div class="section">
                 <h2>Skills</h2>
                 <div class="skills">
-                    <div>Android Development</div>
-                    <div>Can carry on VALORANT add me: kariman#huh</div>
-                    <div>Bikerist</div>
+                    <div>Batak Mag-Gitara</div>
+                    <div>Certified Siraulo</div>
+                    <div>Bebe Time Enthusiast</div>
                     <div>ChatGpt Prompt Engineer</div>
                 </div>
             </div>
@@ -173,16 +173,16 @@
             <div class="section">
                 <h2>Contact Information</h2>
                 <div class="contact-info">
-                    <div>Email: accerina@student.apc.edu.ph</div>
+                    <div>Email: john@student.apc.edu.ph</div>
                     <div>Phone: (123) 456-7890</div>
-                    <div>LinkedIn: <a href="https://www.linkedin.com/in/aljuncerina/" target="_blank">linkedin.com/in/aljuncerina</a></div>
-                    <div>GitHub: <a href="https://github.com/kar1man" target="_blank">github.com/kar1man</a></div>
+                    <div>LinkedIn: <a href="https://www.linkedin.com/in/john-lenard-resquites-610867288/?originalSubdomain=ph" target="_blank">linkedin.com/in/aljuncerina</a></div>
+                    <div>GitHub: <a href="https://github.com/menace" target="_blank">github.com/menace</a></div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            &copy; 2024 Aljun Cerina. All Rights Reserved.
+            &copy; 2024 John Lenard Resquites. All Rights Reserved.
         </div>
     </div>
 </body>
