--- a/about-arones.html
+++ b/about-arones.html
@@ -24,6 +24,11 @@
             align-items: center;
             gap: 20px;
             padding: 20px 0;
+            position: relative;
+            background-color: #252771; /* Banner background color */
+            color: white;
+            padding: 40px 20px; /* Adjust padding for better spacing */
+            border-radius: 10px; /* Optional rounded corners */
         }
 
         .header img {
@@ -31,7 +36,8 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
-            border: 3px solid #0c0d0e;
+            border: 3px solid white; /* Highlight the image */
+            background-color: #fff; /* White background */
         }
 
         .header-content {
@@ -41,19 +47,19 @@
         .header-content h1 {
             margin: 0;
             font-size: 2em;
-            color: #0c0d0d;
+            color: #ffffff; /* Text color */
         }
 
         .header-content p {
             margin: 10px 0;
             font-size: 1.1em;
-            color: #555;
+            color: #e2ad42; /* Slightly lighter text color */
         }
 
         .objective {
             margin-top: 10px;
-            font-size: 2em;
-            color: #333;
+            font-size: smaller;
+            color: #dcdcdc;
         }
 
         .content {
@@ -66,8 +72,8 @@
 
         .section h2 {
             margin-bottom: 10px;
-            color: #4c4a4a;
-            border-bottom: 2px solid #494545;
+            color: #e2ad42;
+            border-bottom: 2px solid #e2ad42;
             display: inline-block;
         }
 
