--- a/about-cerina.html
+++ b/about-cerina.html
@@ -36,7 +36,8 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
-            border: 3px solid #b9c1c8;
+            border: 3px solid white; /* Highlight the image */
+            background-color: #fff; /* White background */
         }
 
         .header-content {
@@ -46,19 +47,19 @@
         .header-content h1 {
             margin: 0;
             font-size: 2em;
-            color: #ffffff;
+            color: #ffffff; /* Text color */
         }
 
         .header-content p {
             margin: 10px 0;
             font-size: 1.1em;
-            color: #e2ad42;
+            color: #e2ad42; /* Slightly lighter text color */
         }
 
         .objective {
             margin-top: 10px;
-            font-size: 1em;
-            color: #333;
+            font-size: smaller;
+            color: #dcdcdc;
         }
 
         .content {
@@ -71,8 +72,8 @@
 
         .section h2 {
             margin-bottom: 10px;
-            color: #61627d;
-            border-bottom: 2px solid #61627d;
+            color: #e2ad42;
+            border-bottom: 2px solid #e2ad42;
             display: inline-block;
         }
 
@@ -129,7 +130,6 @@
             .header-content {
                 margin-top: 10px;
             }
-            
         }
     </style>
 </head>
