--- a/about-resquites.html
+++ b/about-resquites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aljun Cerina</title>
+    <title>John Lenard B. Resquites</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +36,8 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
-            border: 3px solid #b9c1c8;
+            border: 3px solid white; /* Highlight the image */
+            background-color: #fff; /* White background */
         }
 
         .header-content {
@@ -46,19 +47,19 @@
         .header-content h1 {
             margin: 0;
             font-size: 2em;
-            color: #ffffff;
+            color: #ffffff; /* Text color */
         }
 
         .header-content p {
             margin: 10px 0;
             font-size: 1.1em;
-            color: #e2ad42;
+            color: #e2ad42; /* Slightly lighter text color */
         }
 
         .objective {
             margin-top: 10px;
-            font-size: 1em;
-            color: #333;
+            font-size: smaller;
+            color: #dcdcdc;
         }
 
         .content {
@@ -71,8 +72,8 @@
 
         .section h2 {
             margin-bottom: 10px;
-            color: #3498db;
-            border-bottom: 2px solid #3498db;
+            color: #e2ad42;
+            border-bottom: 2px solid #e2ad42;
             display: inline-block;
         }
 
@@ -129,16 +130,15 @@
             .header-content {
                 margin-top: 10px;
             }
-            
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <img src="aljun-pic.jpg" alt="Aljun's pfp">
+            <img src="lenard.jpg" alt="Aljun's pfp">
             <div class="header-content">
-                <h1>Cerina, Aljun C.</h1>
+                <h1>Resquites, John Lenard B.</h1>
                 <p>Student at Asia Pacific College</p>
                 <p class="objective">Manila, National Capital Region, Philippines</p>
             </div>
@@ -153,10 +153,10 @@
             <div class="section">
                 <h2>Skills</h2>
                 <div class="skills">
-                    <div>Android Development</div>
-                    <div>Can carry on VALORANT add me: kariman#huh</div>
-                    <div>Bikerist</div>
-                    <div>ChatGpt Prompt Engineer</div>
+                    <div>Bebe Time Enthusiast</div>
+                    <div>Guitar Specialist</div>
+                    <div>Certified Inter</div>
+                    <div>Katarina Main</div>
                 </div>
             </div>
 
@@ -173,16 +173,16 @@
             <div class="section">
                 <h2>Contact Information</h2>
                 <div class="contact-info">
-                    <div>Email: accerina@student.apc.edu.ph</div>
+                    <div>Email: jbresquites@student.apc.edu.ph</div>
                     <div>Phone: (123) 456-7890</div>
-                    <div>LinkedIn: <a href="https://www.linkedin.com/in/aljuncerina/" target="_blank">linkedin.com/in/aljuncerina</a></div>
-                    <div>GitHub: <a href="https://github.com/kar1man" target="_blank">github.com/kar1man</a></div>
+                    <div>LinkedIn: <a href="https://www.linkedin.com/in/john-lenard-resquites-610867288/?originalSubdomain=ph" target="_blank">linkedin.com/in/aljuncerina</a></div>
+                    <div>GitHub: <a href="https://github.com/menace" target="_blank">github.com/kar1man</a></div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            &copy; 2024 Aljun Cerina. All Rights Reserved.
+            &copy; 2024 John Lenard Resquites. All Rights Reserve.
         </div>
     </div>
 </body>
