Added the back home button

--- a/about-cerina.html
+++ b/about-cerina.html
@@ -13,6 +13,30 @@
             color: #333;
         }
 
+        .nav-container {
+            position: fixed;
+            top: 16px;
+            left: 16px;
+            z-index: 1000;
+        }
+
+        .back-btn {
+            display: inline-block;
+            padding: 10px 16px;
+            background-color: #252771; /* Blue background */
+            color: white;
+            text-decoration: none;
+            border-radius: 8px; /* Rounded corners */
+            font-size: 10px;
+            font-weight: bold;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+            transition: background-color 0.3s ease;
+        }
+
+        .back-btn:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+
         .container {
             max-width: 900px;
             margin: 0 auto;
@@ -134,6 +158,12 @@
     </style>
 </head>
 <body>
+    <div class="nav-container">
+        <a href="index.html" class="back-btn">
+            &#8592; Back
+        </a>
+    </div>
+
     <div class="container">
         <div class="header">
             <img src="aljun-pic.jpg" alt="Aljun's pfp">
