landing page fix

--- a/index.html
+++ b/index.html
@@ -9,167 +9,91 @@
 </head>
 <body>
 <div id="wrapper">
-    <!-- Start of Body -->
-    <div id="body">
-        <!-- Header/Banner Section -->
-        <ul id="topnav">
-            <li><a class="active">ABOUT SEAT</a></li>
-            <li><a href="about-arones.html">Arones</a></li>
-            <li><a href="about-cerina.html">Cerina</a></li>
-            <li><a href="about-resquites.html">Resquites</a></li>
-            <li><a href="about-serafico.html">Serafico</a></li>
-            <li><a href="#">FAQs</a></li>
-
-<!--start body-->
-
-<div id="body">
-<!--start header/banner-->
-<!--Menu-->
-<!--End of Menu-->
-<ul id="topnav">
-    <li><a class="active">ABOUT SEAT</a></li>
-
-    <li><a href="about-arones.html">Arones</a></li>
-    <li><a href="about-cerina.html">Cerina</a></li>
-
-    <li><a href="#">Resquites</a></li>
-    <li><a href="about-serafico.html">Serafico</a></li>
-    <li><a href="#">FAQs</a></li>
-</ul>
-<div id="banner">
-    <h1>Introduction to <em>HTML5 and CSS3</em> 5th Week</h1>
-    <p><em>This is an example of HTML 5 Linked to External CSS3</em></p>
- 
-</div>
-<!--end of header/banner-->
-    <!--Start of Sidebar-->
+    <!-- Header/Banner Section -->
+    <ul id="topnav">
+        <li><a class="active">ABOUT SEAT</a></li>
+        <li><a href="about-arones.html">Arones</a></li>
+        <li><a href="about-cerina.html">Cerina</a></li>
+        <li><a href="about-resquites.html">Resquites</a></li>
+        <li><a href="about-serafico.html">Serafico</a></li>
+        <li><a href="#">FAQs</a></li>
+    </ul>
+    <div id="banner">
+        <h1>Introduction to <em>HTML5 and CSS3</em> 5th Week</h1>
+        <p><em>This is an example of HTML5 linked to external CSS3</em></p>
+    </div>
+    <!-- Sidebar Section -->
     <div id="sidebar">
-        <h2>About</h2>
-        <p>Use this reference for your PETA Midterm Project</p>
-        <h2>Categories</h2>
+        <h2>About Project SEAT</h2>
+        <p>At SEAT, we are revolutionizing transportation with seamless, smart, and efficient solutions for commuters.</p>
+        <h2>Our Services</h2>
         <ul>
-            <li><a href="#">Introduction to Web Design</a></li>
-            <li><a href="#">Introduction to HTML5</a></li>
-            <li><a href="#">Why HTML5?</a></li>
-            <li><a href="#">Introduction to CSS3</a></li>
-            <li><a href="#">Why CSS3?</a></li>
-            <li><a href="#">Web Development</a></li>
+            <li><a class="active">Cash-in Options</a></li>
+            <li><a href="#">Real-Time Arrival Tracker</a></li>
+            <li><a href="#">Crowdedness Tracker</a></li>
+            <li><a href="#">Transportation Discounts</a></li>
+            <li><a href="#">Announcements</a></li>
+            <li><a href="#">Drop-off Station Notifications</a></li>
+            <li><a href="#">Loans for Transit Passes</a></li>
         </ul>
-        <h2>List Here</h2>
+        <h2>Additional Resources</h2>
         <ul>
-            <li><a href="#">List 1</a></li>
-            <li><a href="#">List 2</a></li>
-            <li><a href="#">List 3</a></li>
-            <li><a href="#">List 4</a></li>
-            <li><a href="#">List 5</a></li>
+            <li><a href="#">Community Events</a></li>
+            <li><a href="#">Tech Updates</a></li>
+            <li><a href="#">How-to Guides</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Support</a></li>
         </ul>
         <h2>Links</h2>
         <ul>
-            <li><a href="#">Visit APC Website</a></li>
+            <li><a href="https://www.apc.edu.ph">Visit APC Website</a></li>
         </ul>
     </div>
+    <!-- Sidebar Left Section -->
     <div id="sidebar-left">
-        <h2>About</h2>
-        <p>Use this reference for your PETA Midterm Project</p>
-        <h2>Categories</h2>
+        <h2>About Us</h2>
+        <p>We are a team of students from Asia Pacific College, passionate about technology and collaboration.</p>
+        <h2>Meet the Team</h2>
         <ul>
-            <li><a href="#">Introduction to Web Design</a></li>
-            <li><a href="#">Introduction to HTML5</a></li>
-            <li><a href="#">Why HTML5?</a></li>
-            <li><a href="#">Introduction to CSS3</a></li>
-            <li><a href="#">Why CSS3?</a></li>
-            <li><a href="#">Web Development</a></li>
+            <li><a href="https://ph.linkedin.com/in/jon-axl-arones-a8405328a" target="_blank">Arones</a></li>
+            <li><a href="https://ph.linkedin.com/in/aljuncerina" target="_blank">Cerina</a></li>
+            <li><a href="https://ph.linkedin.com/in/john-lenard-resquites-610867288" target="_blank">Resquites</a></li>
+            <li><a href="https://ph.linkedin.com/in/vandre-adrian-serafico-1b461b28a" target="_blank">Serafico</a></li>
         </ul>
-        <h2>List Here</h2>
+        <h2>Contact Us</h2>
         <ul>
-            <li><a href="#">List 1</a></li>
-            <li><a href="#">List 2</a></li>
-            <li><a href="#">List 3</a></li>
-            <li><a href="#">List 4</a></li>
-            <li><a href="#">List 5</a></li>
+            <li><a href="mailto:jaarones@student.apc.edu.ph">jaarones@student.apc.edu.ph</a></li>
+            <li><a href="mailto:accerina@student.apc.edu.ph">accerina@student.apc.edu.ph</a></li>
+            <li><a href="mailto:jbresquites@student.apc.edu.ph">jbresquites@student.apc.edu.ph</a></li>
+            <li><a href="mailto:vcserafico@student.apc.edu.ph">vcserafico@student.apc.edu.ph</a></li>
         </ul>
-        <h2>Links</h2>
+        <h2>External Links</h2>
         <ul>
-            <li><a href="#">Visit APC Website</a></li>
+            <li><a href="https://www.apc.edu.ph">Visit APC Website</a></li>
         </ul>
-        <div id="banner">
-            <h1>Welcome to <em>Row 3 Left Side</em> Student Profiles!</h1>
-            <p><em>Discover our journey, skills, and collaborative efforts.</em></p>
-        </div>
-        <!-- Sidebar Section -->
-        <div id="sidebar">
-            <h2>About Project SEAT</h2>
-            <p>At SEAT, we are revolutionizing how people travel by offering seamless, smart, and efficient transportation solutions. Our mission is to provide a user-friendly platform where commuters can easily access real-time information and manage their transit access passes while traveling across the city.</p>
-            <h2>Our Services</h2>
-            <ul>
-                <li><a class="active">Cash-in Options</a></li>
-                <li><a href="#">Real-Time Arrival Tracker</a></li>
-                <li><a href="#">Crowdedness Tracker</a></li>
-                <li><a href="#">Transportation Discounts</a></li>
-                <li><a href="#">Announcements</a></li>
-                <li><a href="#">Drop-off Station Notifications</a></li>
-                <li><a href="#">Loans for Transit Passes</a></li>
-            </ul>
-            <h2>Additional Resources</h2>
-            <ul>
-                <li><a href="#">Community Events</a></li>
-                <li><a href="#">Tech Updates</a></li>
-                <li><a href="#">How-to Guides</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Support</a></li>
-            </ul>
-            <h2>Links</h2>
-            <ul>
-                <li><a href="https://www.apc.edu.ph">Visit APC Website</a></li>
-            </ul>
-        </div>
-        <div id="sidebar-left">
-            <h2>About Us</h2>
-            <p>We are a team of aspiring students from Asia Pacific College, passionate about technology, innovation, and collaboration. Our mission is to excel together while contributing to a brighter future.</p>
-            <h2>Meet the Team</h2>
+    </div>
+    <!-- Main Content Section -->
+    <div id="container">
+        <div id="content">
+            <div class="item">
+                <h1>Our Vision</h1>
+                <p>We envision a world where smart transportation solutions simplify lives and promote sustainability.</p>
                 <ul>
-                    <li><a href="https://ph.linkedin.com/in/jon-axl-arones-a8405328a" target="_blank">Arones</a></li>
-                    <li><a href="https://ph.linkedin.com/in/aljuncerina?original_referer=https%3A%2F%2Fwww.google.com%2F" target="_blank">Cerina</a></li>
-                    <li><a href="https://ph.linkedin.com/in/john-lenard-resquites-610867288" target="_blank">Resquites</a></li>
-                    <li><a href="https://ph.linkedin.com/in/vandre-adrian-serafico-1b461b28a" target="_blank">Serafico</a></li>
+                    <li>Seamless connectivity</li>
+                    <li>Smart, efficient systems</li>
+                    <li>User-centric design</li>
+                    <li>Commitment to excellence</li>
                 </ul>
-
-            <h2>Contact Us</h2>
-            <ul>
-                <li><a href="mailto:jaarones@student.apc.edu.ph">jaarones@student.apc.edu.ph</a></li>
-                <li><a href="mailto:accerina@student.apc.edu.ph">accerina@student.apc.edu.ph</a></li>
-                <li><a href="mailto:jbresquites@student.apc.edu.ph">jbresquites@student.apc.edu.ph</a></li>
-                <li><a href="mailto:vcserafico@student.apc.edu.ph">vcserafico@student.apc.edu.ph</a></li>
-            </ul>
-            <h2>External Links</h2>
-            <ul>
-                <li><a href="https://www.apc.edu.ph">Visit APC Website</a></li>
-            </ul>
-        </div>
-        <!-- Main Content Section -->
-        <div id="container">
-            <div id="content">
-                <div class="item">
-                    <h1>Our Vision</h1>
-                    <p>We envision a world where smart transportation solutions simplify lives and promote sustainability.</p>
-                    <blockquote><p>""</p></blockquote>
-                    <ul>
-                        <li>Seamless connectivity</li>
-                        <li>Smart, efficient systems</li>
-                        <li>User-centric design</li>
-                        <li>Commitment to excellence</li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <h1>Our Goals</h1>
-                    <p>Our objectives are to foster collaboration, harness technology, and deliver impactful solutions.</p>
-                    <ul>
-                        <li>Expand accessibility</li>
-                        <li>Improve user experience</li>
-                        <li>Embrace innovation</li>
-                        <li>Promote sustainable practices</li>
-                    </ul>
-                </div>
+            </div>
+            <div class="item">
+                <h1>Our Goals</h1>
+                <p>Our objectives are to foster collaboration, harness technology, and deliver impactful solutions.</p>
+                <ul>
+                    <li>Expand accessibility</li>
+                    <li>Improve user experience</li>
+                    <li>Embrace innovation</li>
+                    <li>Promote sustainable practices</li>
+                </ul>
             </div>
         </div>
     </div>
