Added logo for seat and minor revisions, wont commit on remote repo tho

--- a/about-arones.html
+++ b/about-arones.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Jon Axl Arones</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/seat-logo.png">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -157,15 +160,26 @@
         }
     </style>
 </head>
+
+
 <body>
     <div class="nav-container">
         <a href="index.html" class="back-btn">
             &#8592; Back
         </a>
     </div>
-    <div class="container">
+    <div class="container" style="">
+        <ul id="topnav">
+            <li><a class="active">ABOUT SEAT</a></li>
+            <li><a href="about-arones.html" style="background-color: #0056b3;">Arones</a></li>
+            <li><a href="about-cerina.html">Cerina</a></li>
+            <li><a href="about-resquites.html">Resquites</a></li>
+            <li><a href="about-serafico.html">Serafico</a></li>
+            <li><a href="#">FAQs</a></li>
+        </ul>
+        
         <div class="header">
-            <img src="Arones_pic.jpg" alt="Your Profile Picture">
+            <img src="/images/arones-pic.jpg" alt="Arones' pfp">
             <div class="header-content">
                 <h1>Arones, Jon Axl A.</h1>
                 <p>"You are better when you know yourself."</p>
