--- a/about-cerina.html
+++ b/about-cerina.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aljun Cerina</title>
+    <link rel="icon" href="/images/seat-logo.png">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -157,6 +159,8 @@
         }
     </style>
 </head>
+
+
 <body>
     <div class="nav-container">
         <a href="index.html" class="back-btn">
@@ -166,7 +170,7 @@
 
     <div class="container">
         <div class="header">
-            <img src="aljun-pic.jpg" alt="Aljun's pfp">
+            <img src="/images/cerina-pic.jpg" alt="Aljun's pfp">
             <div class="header-content">
                 <h1>Cerina, Aljun C.</h1>
                 <p>Student at Asia Pacific College</p>
@@ -185,7 +189,7 @@
                 <div class="skills">
                     <div>Android Development</div>
                     <div>Can carry on VALORANT add me: kariman#huh</div>
-                    <div>Bikerist</div>
+                    <div>Cybersecurity Guard (SQUID GAME)</div>
                     <div>ChatGpt Prompt Engineer</div>
                 </div>
             </div>
