--- a/about-serafico.html
+++ b/about-serafico.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Vandre Adrian Serafico</title>
+    <link rel="icon" href="/images/seat-logo.png">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -157,6 +159,8 @@
         }
     </style>
 </head>
+
+
 <body>
     <div class="nav-container">
         <a href="index.html" class="back-btn">
@@ -166,7 +170,7 @@
 
     <div class="container">
         <div class="header">
-            <img src="vandre.jpg" alt="Your Profile Picture">
+            <img src="/images/serafico-pic.jpg" alt="Serafico's pfp">
             <div class="header-content">
                 <h1>Serafico, Vandre Adrian C.</h1>
                 <p>Student at Asia Pacific College</p>
