--- a/trial1.html
+++ b/trial1.html
@@ -8,25 +8,36 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/seat-logo.png">
 </head>
+
+
 <body>
-<div id="wrapper">
+
+<div id="wrapper-profile">
     <!-- Header/Banner Section -->
     <ul id="topnav">
-        <li><a class="active">ABOUT SEAT</a></li>
+        <li><a href="index.html">ABOUT SEAT</a></li>
         <li><a href="about-arones.html">Arones</a></li>
         <li><a href="about-cerina.html">Cerina</a></li>
         <li><a href="about-resquites.html">Resquites</a></li>
         <li><a href="about-serafico.html">Serafico</a></li>
-        <li><a href="trial1.html">Squid Man</a></li>
+        <li><a class="active">Squid Man</a></li>
     </ul>
     
-    <div id="banner">
-        <h1>Introducing <em>Team SEAT</em></h1>
-        <p><em>This is an example of HTML5 Linked to External CSS3</em></p>
+    <div id="profile-bg">
+        <div id="user-pfp">
+            <img src="/images/cerina-pic.jpg" alt="Aljun's pfp">
+        </div>
+
+        <div>
+            <h1 id="user-name">Aljun Cerina</h1>
+            <h2 id="user-deets">Student at Asia Pacific College</h2>
+        </div>
+
     </div>
 
+    
     <!-- Sidebar Section -->
-    <div id="sidebar">
+    <div id="sidebar1">
         <h2>About Project SEAT</h2>
         <p>At SEAT, we are revolutionizing transportation with seamless, smart, and efficient solutions for commuters.</p>
         <h2>Our Services</h2>
@@ -53,7 +64,7 @@
         </ul>
     </div>
     <!-- Sidebar Left Section -->
-    <div id="sidebar-left">
+    <div id="sidebar-left1">
         <h2>About Us</h2>
         <p>We are a team of students from Asia Pacific College, passionate about technology and collaboration.</p>
         <h2>Meet the Team</h2>
@@ -77,7 +88,7 @@
     </div>
     <!-- Main Content Section -->
     <div id="container">
-        <div id="content">
+        <div id="content1">
             <div class="item">
                 <h1>Our Vision</h1>
                 <p>We envision a world where smart transportation solutions simplify lives and promote sustainability.</p>
