--- a/about-resquites.html
+++ b/about-resquites.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Lenard Resquites</title>
+    <link rel="icon" href="/images/seat-logo.png">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -157,6 +159,8 @@
         }
     </style>
 </head>
+
+
 <body>
     <div class="nav-container">
         <a href="index.html" class="back-btn">
@@ -165,7 +169,7 @@
     </div>
     <div class="container">
         <div class="header">
-            <img src="lenard.jpg" alt="Aljun's pfp">
+            <img src="/images/resquites-pic.jpg" alt="Lenard's pfp">
             <div class="header-content">
                 <h1>Resquites, John Lenard B.</h1>
                 <p>Student at Asia Pacific College</p>
